.opsera-chflood/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-chflood-dev
  labels:
    app: chflood
    tenant: opsera
    environment: dev
    managed-by: opsera
