.opsera-chflood/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chflood-service
  labels:
    app: chflood
    tenant: opsera
    managed-by: opsera
spec:
  type: ClusterIP
  selector:
    app: chflood
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
